@@ -31,7 +31,7 @@ package net.grinder;
  */
 public class Console
 {       
-    public static void main(String args[])
+    public static void main(String[] args)
 	throws Exception
     {
 	if (args.length > 0) {
