@@ -28,7 +28,7 @@
     http://grinder.sourceforge.net/</a>.</p>
 
     <p>You can see a screen shot of the console in action <a
-    href="http://sourceforge.net/dbimage.php?id=1573">here</a>.</p>
+    href="screenshot.gif">here</a>.</p>
 
     <h2>Support</h2>
   
