@@ -1,12 +1,21 @@
+   Fix sleepTimeVariation documentation. Thanks to Mika Laitio for the
+   report.
+
+   Allow query strings to be passed with POSTs. Thanks to Kjetil JD
+   for the fix.
+
+
 Grinder 2.8.2
 -------------
+
+   The Grinder is now released under a BSD style license.
 
    New UI showing worker process status from Dirk Feufel.
 
    Fix console communication bug where socket reader threads would
    sleep each time a dead socket handle was polled.
 
-   Fix SocketPlugin bug where multiple request files where incorrectly
+   Fix SocketPlugin bug where multiple request files were incorrectly
    handled. Thanks to Hussein Badakhchani for the report.
 
 
